# x1c

./: .gitignore  Cargo.toml  index.html  styles.css
src/: common.rs  lib.rs  main.rs  prepare_for_timed_phase.rs  resolution_phase.rs  rules.rs  setup.rs  tech_reference.rs  timed_phase.rs
xcom-1-card/: Cargo.toml
xcom-1-card/src/: lib.rs  main.rs
