[package]
name = "xcom-1-card-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
yew = "0.18"
rand = "0.8"
indoc = "1.0"
boolinator = "2.4"
log = "0.4.6"
js-sys = "0.3"
gloo = "0.5"
wasm-logger = "0.2.0"
xcom-1-card = { path = "xcom-1-card" }
getrandom = { version = "0.2", features = ["js"] }
